Issue #14: Added build to bundle the Windows distribution.